deployment/redis-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
  namespace: cloudmc
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cloudmc           # Or whatever label your client Pod has
    ports:
    - protocol: TCP
      port: 6379
  policyTypes:
  - Ingress
